omni/tests/goldens/types/unknown_type_09.omni
let value9:Mystery9 = 1
